--- a/app/src/main/res/layout/activity_twopane.xml
+++ b/app/src/main/res/layout/activity_twopane.xml
@@ -23,7 +23,7 @@
     -->
 
     <fragment android:id="@+id/item_list"
-        android:name="com.example.coffeemania.MainFragment"
+        android:name="com.example.coffeemania.fragment.MainFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
