--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -7,46 +7,196 @@
     <TextView
         android:id="@+id/detail_name"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="@dimen/detail_block_margin"
+        android:textColor="@android:color/black"
+        android:textSize="22sp" />
 
-    <TextView
-        android:id="@+id/detail_category"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:padding="@dimen/detail_block_margin"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/detail_city"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_local_dining_black_48dp"
+            android:layout_marginLeft="@dimen/detail_icon_margin_left"
+            android:layout_marginRight="@dimen/detail_icon_margin_right" />
 
-    <TextView
-        android:id="@+id/detail_address"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/detail_category"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="18sp" />
 
-    <TextView
-        android:id="@+id/detail_checkins"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/detail_users"
+    <LinearLayout
+        android:id="@+id/detail_group_address"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:background="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        android:padding="@dimen/detail_block_margin"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/detail_tip"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_explore_black_48dp"
+            android:layout_marginLeft="@dimen/detail_icon_margin_left"
+            android:layout_marginRight="@dimen/detail_icon_margin_right" />
 
-    <TextView
-        android:id="@+id/detail_lat"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/detail_address"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="18sp" />
 
-    <TextView
-        android:id="@+id/detail_lng"
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/detail_group_phone"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:padding="@dimen/detail_block_margin"
+        android:background="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        android:visibility="gone"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_phone_black_48dp"
+            android:layout_marginLeft="@dimen/detail_icon_margin_left"
+            android:layout_marginRight="@dimen/detail_icon_margin_right" />
+
+        <TextView
+            android:id="@+id/detail_phone"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="18sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/detail_group_url"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/detail_block_margin"
+        android:background="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        android:visibility="gone"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_language_black_48dp"
+            android:layout_marginLeft="@dimen/detail_icon_margin_left"
+            android:layout_marginRight="@dimen/detail_icon_margin_right" />
+
+        <TextView
+            android:id="@+id/detail_url"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="18sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/detail_block_margin"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:id="@+id/detail_group_checkins"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="@dimen/detail_block_margin"
+            android:background="?android:attr/selectableItemBackground"
+            android:clickable="true">
+
+            <ImageView
+                android:layout_height="24dp"
+                android:layout_width="24dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_location_on_black_48dp"
+                android:layout_marginLeft="@dimen/detail_icon_margin_left"
+                android:layout_marginRight="@dimen/detail_icon_margin_right" />
+
+            <TextView
+                android:id="@+id/detail_checkins"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/detail_group_users"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="@dimen/detail_block_margin"
+            android:background="?android:attr/selectableItemBackground"
+            android:clickable="true">
+
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_person_black_48dp"
+                android:layout_marginLeft="@dimen/detail_icon_margin_left"
+                android:layout_marginRight="@dimen/detail_icon_margin_right" />
+
+            <TextView
+                android:id="@+id/detail_users"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/detail_group_tip"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="@dimen/detail_block_margin"
+            android:background="?android:attr/selectableItemBackground"
+            android:clickable="true">
+
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_attach_money_black_48dp"
+                android:layout_marginLeft="@dimen/detail_icon_margin_left"
+                android:layout_marginRight="@dimen/detail_icon_margin_right" />
+
+            <TextView
+                android:id="@+id/detail_tip"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp" />
+        </LinearLayout>
+
+    </LinearLayout>
 
 </LinearLayout>
