--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,26 +1,24 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:padding="16dp">
+    android:orientation="vertical"
+    android:padding="10dp">
 
     <TextView
         android:id="@+id/item_name"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:textColor="@android:color/black"
+        android:textSize="18sp" />
 
     <TextView
-        android:id="@+id/item_distance"
-        android:layout_below="@+id/item_name"
-        android:layout_alignParentLeft="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:id="@+id/item_distance_address"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:singleLine="true"
+        android:lines="1"
+        android:ellipsize="marquee"
+        android:textSize="16sp" />
 
-    <TextView
-        android:id="@+id/item_address"
-        android:layout_below="@+id/item_name"
-        android:layout_toRightOf="@+id/item_distance"
-        android:layout_marginLeft="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-</RelativeLayout>
+</LinearLayout>
