--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,202 +1,212 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/detail_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:padding="@dimen/detail_block_margin"
-        android:textColor="@android:color/black"
-        android:textSize="22sp" />
-
+    android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/detail_block_margin"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_local_dining_black_48dp"
-            android:layout_marginLeft="@dimen/detail_icon_margin_left"
-            android:layout_marginRight="@dimen/detail_icon_margin_right" />
+        android:orientation="vertical">
 
         <TextView
-            android:id="@+id/detail_category"
-            android:layout_gravity="center"
+            android:id="@+id/detail_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="18sp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/detail_group_address"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?android:attr/selectableItemBackground"
-        android:clickable="true"
-        android:padding="@dimen/detail_block_margin"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_explore_black_48dp"
-            android:layout_marginLeft="@dimen/detail_icon_margin_left"
-            android:layout_marginRight="@dimen/detail_icon_margin_right" />
-
-        <TextView
-            android:id="@+id/detail_address"
-            android:layout_gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="18sp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/detail_group_phone"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/detail_block_margin"
-        android:background="?android:attr/selectableItemBackground"
-        android:clickable="true"
-        android:visibility="gone"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_phone_black_48dp"
-            android:layout_marginLeft="@dimen/detail_icon_margin_left"
-            android:layout_marginRight="@dimen/detail_icon_margin_right" />
-
-        <TextView
-            android:id="@+id/detail_phone"
-            android:layout_gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="18sp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/detail_group_url"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/detail_block_margin"
-        android:background="?android:attr/selectableItemBackground"
-        android:clickable="true"
-        android:visibility="gone"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_language_black_48dp"
-            android:layout_marginLeft="@dimen/detail_icon_margin_left"
-            android:layout_marginRight="@dimen/detail_icon_margin_right" />
-
-        <TextView
-            android:id="@+id/detail_url"
-            android:layout_gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="18sp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/detail_block_margin"
-        android:orientation="horizontal">
+            android:gravity="center"
+            android:padding="@dimen/detail_block_margin"
+            android:textColor="@android:color/black"
+            android:textSize="22sp" />
 
         <LinearLayout
-            android:id="@+id/detail_group_checkins"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:padding="@dimen/detail_block_margin"
-            android:background="?android:attr/selectableItemBackground"
-            android:clickable="true">
-
-            <ImageView
-                android:layout_height="24dp"
-                android:layout_width="24dp"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_location_on_black_48dp"
-                android:layout_marginLeft="@dimen/detail_icon_margin_left"
-                android:layout_marginRight="@dimen/detail_icon_margin_right" />
-
-            <TextView
-                android:id="@+id/detail_checkins"
-                android:layout_gravity="center"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="18sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/detail_group_users"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:padding="@dimen/detail_block_margin"
-            android:background="?android:attr/selectableItemBackground"
-            android:clickable="true">
+            android:orientation="horizontal">
 
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_gravity="center"
-                android:src="@drawable/ic_person_black_48dp"
+                android:src="@drawable/ic_local_dining_black_48dp"
                 android:layout_marginLeft="@dimen/detail_icon_margin_left"
                 android:layout_marginRight="@dimen/detail_icon_margin_right" />
 
             <TextView
-                android:id="@+id/detail_users"
+                android:id="@+id/detail_category"
                 android:layout_gravity="center"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp" />
+
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/detail_group_tip"
-            android:layout_width="0dp"
+            android:id="@+id/detail_group_address"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:padding="@dimen/detail_block_margin"
             android:background="?android:attr/selectableItemBackground"
-            android:clickable="true">
+            android:clickable="true"
+            android:padding="@dimen/detail_block_margin"
+            android:orientation="horizontal">
 
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_gravity="center"
-                android:src="@drawable/ic_attach_money_black_48dp"
+                android:src="@drawable/ic_explore_black_48dp"
                 android:layout_marginLeft="@dimen/detail_icon_margin_left"
                 android:layout_marginRight="@dimen/detail_icon_margin_right" />
 
             <TextView
-                android:id="@+id/detail_tip"
+                android:id="@+id/detail_address"
                 android:layout_gravity="center"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp" />
+
         </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/detail_group_phone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/detail_block_margin"
+            android:background="?android:attr/selectableItemBackground"
+            android:clickable="true"
+            android:visibility="gone"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_phone_black_48dp"
+                android:layout_marginLeft="@dimen/detail_icon_margin_left"
+                android:layout_marginRight="@dimen/detail_icon_margin_right" />
+
+            <TextView
+                android:id="@+id/detail_phone"
+                android:layout_gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="18sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/detail_group_url"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/detail_block_margin"
+            android:background="?android:attr/selectableItemBackground"
+            android:clickable="true"
+            android:visibility="gone"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_language_black_48dp"
+                android:layout_marginLeft="@dimen/detail_icon_margin_left"
+                android:layout_marginRight="@dimen/detail_icon_margin_right" />
+
+            <TextView
+                android:id="@+id/detail_url"
+                android:layout_gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="18sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/detail_block_margin"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:id="@+id/detail_group_checkins"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:padding="@dimen/detail_block_margin"
+                android:background="?android:attr/selectableItemBackground"
+                android:clickable="true">
+
+                <ImageView
+                    android:layout_height="24dp"
+                    android:layout_width="24dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_location_on_black_48dp"
+                    android:layout_marginLeft="@dimen/detail_icon_margin_left"
+                    android:layout_marginRight="@dimen/detail_icon_margin_right" />
+
+                <TextView
+                    android:id="@+id/detail_checkins"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/detail_group_users"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:padding="@dimen/detail_block_margin"
+                android:background="?android:attr/selectableItemBackground"
+                android:clickable="true">
+
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_person_black_48dp"
+                    android:layout_marginLeft="@dimen/detail_icon_margin_left"
+                    android:layout_marginRight="@dimen/detail_icon_margin_right" />
+
+                <TextView
+                    android:id="@+id/detail_users"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/detail_group_tip"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:padding="@dimen/detail_block_margin"
+                android:background="?android:attr/selectableItemBackground"
+                android:clickable="true">
+
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_attach_money_black_48dp"
+                    android:layout_marginLeft="@dimen/detail_icon_margin_left"
+                    android:layout_marginRight="@dimen/detail_icon_margin_right" />
+
+                <TextView
+                    android:id="@+id/detail_tip"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <com.google.android.gms.maps.MapView
+            android:id="@+id/map"
+            android:layout_width="match_parent"
+            android:layout_height="250dp" />
 
     </LinearLayout>
 
-</LinearLayout>
+</ScrollView>
