--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,7 @@
     <dimen name="detail_icon_margin_left">10dp</dimen>
     <dimen name="detail_icon_margin_right">20dp</dimen>
     <dimen name="detail_block_margin">7dp</dimen>
+
+    <dimen name="map_margin_left">0dp</dimen>
+    <dimen name="map_height">250dp</dimen>
 </resources>
